# ComfyUI_FaceAnalysis

./: .gitignore  README.md  __init__.py  dlib  face_analysis.json  faceanalysis.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
